[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx_donut"
authors = [
    {name = "Ambroise Berthe", email = "ambroise.berthe@ikomia.ai"},
]
description = "Export Donut model to onnx and run it with onnxruntime"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["donut", "onnx"]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
          "transformers",
          "torch",
          "torchvision",
          "timm==0.5.4",
          "donut-python",
          "onnx",
          "onnxruntime",
]
dynamic = ["version"]

[tool.setuptools_scm]